welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase: error: Unit does not take parameters
		growFlowers();
                           ^FlowerCase:2: error: Unit does not take parameters
  growFlowers()
             ^FlowerCase:14: error: Unit does not take parameters
  growFlowers()
             ^