welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
def growFlowers{
  growFlowers()
  for (compteur<-1 to 6){
    avance()
  }
  gauche()
  avance()
  avance()
  droite()
  faireFleur(Color.BLUE)
  gauche()
  avance()
  avance()
  growFlowers()
}




def Flowers(){
  faireFleur(Color.RED)
  avance()
  avance()
  faireFleur(Color.CYAN)
  for (compteur<-1 to 6){
    recule()
  }
  droite()
  avance()
  avance()
  gauche()
  avance()
  avance()
  faireFleur(Color.ORANGE)
  for (compteur<-1 to 4){
    recule()
  }
  droite()
  avance()
  avance()
  gauche()
  faireFleur(Color.PINK)
  avance()
  avance()
  faireFleur(Color.GREEN)
  for (compteur <-1 to 6){
    recule()
  }
  
  
}

def faireFleur(c:Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  avance()
  leveBrosse()
  baisseBrosse()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  gauche()
  avance()
 	baisseBrosse()
  leveBrosse()
  retourne()
  avance()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  setCouleurBrosse(Color.YELLOW)
  gauche()
  baisseBrosse()
  leveBrosse()
  avance()
 
  
}